# assessment

./: .gitignore  README.md
docs/: theory.md
palindrome/: README.md
palindrome/PalindromeApp/: Program.cs
palindrome/PalindromeApp/Application/: CheckPalindromeUseCase.cs
palindrome/PalindromeApp/Domain/: IPalindromeChecker.cs  PalindromeChecker.cs
palindrome/PalindromeTests/: CheckPalindromeUseCaseTest.cs  PalindromeCheckerTests.cs
primes/: README.md  main.py  pyproject.toml  requirements-dev.txt
primes/app/application/: sume_primes_usecase.py
primes/app/domain/: prime_service.py
primes/app/exceptions/: app_errors.py
primes/app/infrastructure/cli/: adapter.py
primes/tests/: test_cli_adapter.py  test_sum_primes.py  test_sum_primes_errors.py  test_sum_primes_usecase.py
